# cinematic_editor

./: PROJECT_SOURCE_MASTER.txt  README.md  package-lock.json  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
backend/app/: main.py
backend/app/api/routes/: ai_routes.py
backend/app/core/: config.py
backend/app/services/: ai_command_processor.py
docs/: NATIVE_LAYER_IMPLEMENTATION.md  ai_di_registration.md  ai_editor_integration.md  ai_foundation_audit.md  build_verification_report.md  dependency_alignment_report.md  di_audit_report.md  implementation_gap_plan.md  inference_pipeline_design.md  local_ai_engine_activation.md  model_download_architecture.md  model_download_workflow.md  model_refactor_notes.md  native_architecture.md  native_bridge_contract.md  phase2_completion_report.md  phase3_readiness_report.md  project_audit.md  repository_health_check.md  service_registration_audit.md  textlayer_refactor_completion.md  timeline_integrity_report.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/engine/: frame_compositor.dart  native_bridge.dart  preview_renderer.dart  render_graph.dart  render_scheduler.dart
lib/core/models/: timeline_models.dart
lib/core/services/: proxy_generation_service.dart  task_queue_service.dart  undo_redo_service.dart
lib/core/services/proxy/: proxy_cache_service.dart  proxy_generator_service.dart  proxy_manager.dart
lib/core/services/storage/: FILES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  SETUP.md  app_database.dart  autosave_service.dart  recovery_service.dart  storage.dart  storage_service.dart  undo_redo_integration.dart
lib/core/services/storage/repositories/: export_repository.dart  project_repository.dart  subscription_repository.dart
lib/features/ai_commands/presentation/cubit/: ai_cubit.dart  ai_state.dart
lib/features/ai_commands/services/: ai_command_parser_service.dart  background_removal_service.dart  inference_pipeline_service.dart  local_ai_engine.dart  mediapipe_platform_channel.dart  model_download_service.dart
lib/features/audio/services/: audio_effects_service.dart  audio_mixer_service.dart  auto_caption_service.dart  caption_provider.dart  waveform_service.dart
lib/features/auth/models/: device_models.dart
lib/features/auth/services/: device_security_service.dart
lib/features/editor/presentation/cubit/: editor_cubit.dart
lib/features/editor/presentation/screens/: editor_screen.dart
lib/features/editor/presentation/widgets/panels/: ai_commands_panel.dart  audio_panel.dart  text_panel.dart
lib/features/editor/presentation/widgets/preview/: preview_player_widget.dart
lib/features/editor/presentation/widgets/timeline/: timeline_clip_widget.dart  timeline_playhead_widget.dart  timeline_ruler_widget.dart  timeline_track_widget.dart  (+1 more)
lib/features/editor/services/: motion_tracking_service.dart  stabilization_service.dart
lib/features/export/domain/: export_queue_service.dart  export_service.dart  ffmpeg_command_builder.dart
lib/features/export/models/: export_monitoring_models.dart  export_pipeline_models.dart
lib/features/export/presentation/: export_cubit.dart  export_state.dart
lib/features/export/services/: export_analytics_service.dart  export_pipeline_service.dart
lib/features/subscription/models/: subscription_models.dart
lib/features/subscription/services/: device_security_service.dart  subscription_provider.dart  subscription_service.dart
lib/features/templates/data/: template_repository.dart
lib/features/templates/models/: creator_revenue_models.dart  template_models.dart
lib/features/templates/services/: creator_revenue_service.dart  template_download_service.dart
lib/shared/constants/: app_constants.dart
lib/shared/theme/: app_colors.dart  app_theme.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  README.md
native/cpp/ai_engine/include/: ai_engine.h
native/cpp/ai_engine/src/: ai_engine.cpp
native/cpp/engine/: engine.cc
native/cpp/engine/include/: cinematic_engine.h
native/cpp/engine/src/: cinematic_engine.cpp
native/cpp/ffmpeg_bridge/: ffmpeg_bridge.cc
native/cpp/ffmpeg_bridge/include/: ffmpeg_types.h  ffmpeg_wrapper.h
native/cpp/ffmpeg_bridge/src/: ffmpeg_wrapper.cpp
native/cpp/include/: cinematic_bridge.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
